@@ -18,6 +18,14 @@
 	* typeck.y (validate_move): check for ADDRESS OF var as invalid
 	  (bug #495), fixed check for SET statement
 
+2018-02-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y (select_clause): minimized context-sensitive settings
+	* reserved.c, cobc.h, parser.y: added CB_CS_SELECT
+	* tree.h: added password (reference) to struct cb_file / cb_alternate_key
+	* parser.y, reserved.c: added PASSWORD as PENDING (currently only for
+	  indexed files)
+
 2018-02-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y (report_description_option): fixed reference for CODE IS
@@ -26,7 +34,6 @@
 	  initialization for report files in INITIAL programs
 	* pplex.l, scanner.l: don't consume trailing whitespace/newline
 	  if not necessary, combined some groups with optional/or modifiers
-	* parser.y (select_clause): minimized context-sensitive settings
 
 2018-02-16  Dave Pitts <dpitts@cozx.com>
 
